# stratwork

./: README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Gemfile  _config.yml  api-reference.md  best-practices.md  configuration.md  examples.md  getting-started.md  index.md
stratwork/: Calculator.py  PositionManager.py  RingBuffer.py  StopPriceCalculator.py  TechnicalAnalysisCalculator.py  TradeValidator.py  exceptions.py  types.py
